--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Monserat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
+
 body{
     background-color: rgba(0, 0, 0, 0.795);
     display: flex;
@@ -13,22 +15,25 @@ body{
     flex-direction: column;
     height: 100vh;
 }
+
 .container{
-    background-color: white;
-    border-radius: 25px;
-    box-shadow: 0 5px 15px rgba(255, 255, 255, 0.35) ;
+    background-color: #fff;
+    border-radius: 30px;
+    box-shadow: 0 5px 15px rgba(255, 255, 255, 0.35);
     position: relative;
     overflow: hidden;
     width: 768px;
     max-width: 100%;
-    min-height: 420px;    
+    min-height: 480px;
 }
+
 .container p{
     font-size: 14px;
     line-height: 20px;
     letter-spacing: 0.3px;
-    margin: 20px 0 ;
+    margin: 20px 0;
 }
+
 .container span{
     font-size: 12px;
 }
@@ -41,10 +46,10 @@ body{
 }
 
 .container button{
-    background-color: rgb(225, 13, 13);
-    color: white;
+    background-color:  rgba(233, 100, 12, 0.952);
+    color: #fff;
     font-size: 12px;
-    padding:10px 45px;
+    padding: 10px 45px;
     border: 1px solid transparent;
     border-radius: 8px;
     font-weight: 600;
@@ -56,7 +61,7 @@ body{
 
 .container button.hidden{
     background-color: transparent;
-    border-color: white  ;
+    border-color: #fff;
 }
 
 .container form{
@@ -65,27 +70,26 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 0 4px;
+    padding: 0 40px;
     height: 100%;
 }
 
 .container input{
     background-color: #eee;
-    border: none;
+    border:none;
     margin: 8px 0;
     padding: 10px 15px;
     font-size: 13px;
     border-radius: 8px;
     width: 100%;
     outline: none;
-
 }
 
 .form-container{
     position: absolute;
     top: 0;
-    height: 100px;
-        transition: all 0.6s ease-in-out;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
 }
 
 .sign-in{
@@ -102,13 +106,14 @@ body{
     left: 0;
     width: 50%;
     opacity: 0;
-    z-index: 2;
+    z-index: 1;
 }
+
 .container.active .sign-up{
     transform: translateX(100%);
     opacity: 1;
     z-index: 5;
-    animation: move 0.6sec;  
+    animation: move 0.6s;
 }
 
 @keyframes move{
@@ -119,7 +124,7 @@ body{
     50%, 100%{
         opacity: 1;
         z-index: 5;
-    }   
+    }
 }
 
 .social-icons{
@@ -127,7 +132,7 @@ body{
 }
 
 .social-icons a{
-    border: 1px solid #Ccc;
+    border: 1px solid #ccc;
     border-radius: 20%;
     display: inline-flex;
     justify-content: center;
@@ -137,3 +142,63 @@ body{
     height: 40px;
 }
 
+.toggle-container{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: all 0.6s ease-in-out;
+    border-radius: 20px;
+    z-index: 1000;
+}
+
+.container.active .toggle-container{
+    transform: translateX(-100%);
+    border-radius: 20px;
+}
+
+.toggle{
+    background-color: rgba(233, 100, 12, 0.952);
+    height: 100%;
+    color: #fff;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+}
+
+.container.active .toggle{
+    transform: translateX(50%);
+}
+
+.toggle-panel{
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 30px;
+    text-align: center;
+    top: 0;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+}
+
+.toggle-left{
+    transform: translateX(-200%);
+}
+
+.container.active .toggle-left{
+    transform: translateX(0);
+}
+
+.toggle-right{
+    right: 0;
+    transform: translateX(0);
+}
